--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@11ty/eleventy": "^0.12.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo “Error: no test specified” && exit 1",
+    "build": "npx eleventy",
+    "serve": "npx eleventy --serve",
+    "debug": "DEBUG=* npx eleventy"
   },
   "repository": {
     "type": "git",
