--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,7 +3,8 @@ backend:
   branch: master 
   media_folder: "_site/images/uploads"
   public_folder: "/images/uploads"
-
+  media_library:
+  name: uploadcare
   collections:
   - name: "posts"
     label: "Posts"
