--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,10 +1,10 @@
 backend:
-  name: git-gateway'
+  name: git-gateway
   branch: master 
 media_folder: "_site/images/uploads"
 public_folder: "/images/uploads"
 media_library:
-  - name: uploadcare
+  name: uploadcare
 collections:
 - name: "posts"
   label: "Posts"
